RESULTS/AutoSpec/raw_results/out-4o-oopsla/032_0010/032_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/032_0010/032_merged.c:24:53: error: unterminated comment
   24 |   loop invariant (n % 2 == 0) ==> (b == b_initial); /* where b_initial is the initial value of b */;
      |                                                     ^
